<resources>
    <string name="app_name">Money Saver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name_wallet">Name</string>
    <string name="currency">Currency type</string>
    <string name="amount_wallet">Amount</string>
    <string name="action_save">Done</string>
    <string name="title_activity_transaction_add">Add transaction</string>
    <string name="title_activity_wallet_add">Add Wallet</string>
    <string name="title_transaction_wallet_add">Balance amount</string>
    <string name="title_activity_list_currency">Currency</string>
    <string name="title_activity_category">Choose category</string>
    <string name="action_view_day">View by day</string>
    <string name="action_view_week">View by week</string>
    <string name="action_view_month">View by month</string>
    <string name="action_view_year">View by year</string>
    <string name="action_view_trans">View by transaction</string>
    <string-array name="exp_category_names">
        <item>@string/exp_category_eat</item>
        <item>@string/exp_category_shopping</item>
        <item>@string/exp_category_transporting</item>
        <item>@string/exp_category_friend</item>
        <item>@string/exp_category_love </item>
        <item>@string/exp_category_relax </item>
        <item>@string/exp_category_education</item>
        <item>@string/exp_category_family</item>
        <item>@string/exp_category_travelling</item>
        <item>@string/exp_category_medicine</item>
        <item>@string/exp_category_investment</item>
        <item>@string/exp_category_drink</item>
        <item>@string/exp_category_loan</item>
        <item>@string/exp_category_other</item>
    </string-array>
    <string name="exp_category_eat">Food/drink</string>
    <string name="exp_category_shopping">Shopping</string>
    <string name="exp_category_transporting">Transporting</string>
    <string name="exp_category_friend">Friend</string>
    <string name="exp_category_love">Love</string>
    <string name="exp_category_relax">Relax</string>
    <string name="exp_category_education">Education</string>
    <string name="exp_category_family">Family</string>
    <string name="exp_category_travelling">Travelling</string>
    <string name="exp_category_medicine">Medicine</string>
    <string name="exp_category_investment">Investment</string>
    <string name="exp_category_drink">Drink</string>
    <string name="exp_category_loan">Loan</string>
    <string name="exp_category_other">Other</string>
    <string-array name="exp_category_image">
        <item>foodndrink</item>
        <item>shopping</item>
        <item>transport</item>
        <item>friend</item>
        <item>lover</item>
        <item>entertainment</item>
        <item>education</item>
        <item>family</item>
        <item>travel</item>
        <item>medical</item>
        <item>invest</item>
        <item>drink</item>
        <item>loan</item>
        <item>other_expense</item>
    </string-array>
    <string-array name="inc_category_names">
        <item>@string/inc_category_salary</item>
        <item>@string/inc_category_give</item>
        <item>@string/inc_category_interest</item>
        <item>@string/inc_category_selling</item>
        <item>@string/inc_category_debt</item>
        <item>@string/inc_category_award</item>
        <item>@string/inc_category_other</item>
    </string-array>
    <string name="inc_category_salary">Salary</string>
    <string name="inc_category_give">Give</string>
    <string name="inc_category_interest">Interest Money</string>
    <string name="inc_category_selling">Selling</string>
    <string name="inc_category_debt">Debt</string>
    <string name="inc_category_award">Award</string>
    <string name="inc_category_other">Other</string>
    <string-array name="inc_category_image">
        <item>salary</item>
        <item>give</item>
        <item>interestmoney</item>
        <item>selling</item>
        <item>debt</item>
        <item>award</item>
        <item>other_income</item>
    </string-array>
    <string name="all_category_name">All</string>
    <string name="all_category_image">all</string>
    <string-array name="currency_code">
        <item>VND</item>
        <item>USD</item>
    </string-array>
    <string-array name="currency_name">
        <item>Việt Nam Đồng</item>
        <item>Dollar</item>
    </string-array>
    <string name="warning_wallet_name">No name, please check</string>
    <string name="warning_wallet_cur">No currrency, please check</string>
    <string name="warning_wallet_amount">No money, please check</string>
    <string name="choose_wallet">Is Default</string>
    <string name="title_activity_wallets">List wallet</string>
    <string name="title_activity_wallet_edit">Update wallet</string>
    <string name="action_add">Add wallet</string>
    <string-array name="day_view">
        <item>@string/yesterday</item>
        <item>@string/today</item>
        <item>@string/tomorrow</item>
    </string-array>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="check_amout_exist">No money, please check</string>
    <string name="check_category_exist">No transaction type, please check</string>
    <string name="amount">Amount</string>
    <string name="select_category">Choose transaction type</string>
    <string name="note">Note</string>
    <string name="overview">Overview</string>
    <string name="overview_click_me">Touch to see full list</string>
    <string name="inflow_txt">Income</string>
    <string name="outflow_txt">Expense</string>
    <string name="future">Future</string>
    <string name="onweek">This week</string>
    <string name="preweek">Last week</string>
    <string name="onmonth">This month</string>
    <string name="premonth">Last month</string>
    <string name="title_transaction_wallet_edit">Edit Balance</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_report_expense">Expense</string>
    <string name="title_activity_report_income">Income</string>
    <string name="title_activity_trend">Trends </string>
    <string-array name="type_array">
        <item>@string/type_array_expense</item>
        <item>@string/type_array_income</item>
        <item>@string/type_array_balance</item>
    </string-array>
    <string name="type_array_expense">Expense</string>
    <string name="type_array_income">Income</string>
    <string name="type_array_balance">Balance</string>
    <string-array name="time_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_trend_from_month">From month</string>
    <string name="title_trend_to_month">To month</string>
    <string name="dialog_confirm_delete_trans">Do you want to delete this transaction?</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="dialog_no_button">No</string>
    <string name="check_change_data">Same information, please check</string>
    <string name="title_activity_budget">Budget</string>
    <string name="budget_menu">Budget</string>
    <string name="expense_category">Expense</string>
    <string name="income_category">Incomes</string>
    <string name="budget_applied">Running</string>
    <string name="budget_finished">Finished</string>
    <string name="budget_amount">Budget</string>
    <string name="check_amount_zero">Money is zero, please check</string>
    <string name="budget_from">From</string>
    <string name="budget_to">To</string>
    <string name="setting">Setting</string>
    <string name="trend">Trend</string>
    <string name="manage_wallet">Manages wallet</string>
    <string name="title_activity_settings">Setting</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string-array name="code_currency_array">
        <item>VND</item>
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>SGD</item>
        <item>CAD</item>
    </string-array>
    <string-array name="name_currency_array">
        <item>Việt Nam Đồng</item>
        <item>Dollar</item>
        <item>Yen</item>
        <item>Euro</item>
        <item>Pound</item>
        <item>Rupee</item>
        <item>Singapore dollar</item>
        <item>Canadian dollar</item>
    </string-array>
    <string-array name="symbol_currency_array">
        <item>đ</item>
        <item>$</item>
        <item>¥</item>
        <item>€</item>
        <item>£</item>
        <item>₹</item>
        <item>S$</item>
        <item>C$</item>
    </string-array>
    <string-array name="settings">
        <item>@string/settings_themes</item>
        <item>@string/settings_menu</item>
        
        <item>@string/settings_language</item>
    </string-array>
    <string name="settings_themes">Choose Theme</string>
    <string name="settings_menu">Choose Menu theme</string>
    <string name="settings_language">Choose Language</string>
    <string name="settings_background">Choose Language</string>
    <string name="title_activity_select_theme">Choose Theme</string>
</resources>