<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_view_day" android:title="@string/action_view_day"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_week" android:title="@string/action_view_week"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_month" android:title="@string/action_view_month"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_year" android:title="@string/action_view_year"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_view_trans" android:title="@string/action_view_trans"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
