<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools/tools"
    tools:context="com.alanddev.manwal.TransactionActivity"
    xmlns:manwal="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_wallet" android:icon="@mipmap/wallet"
            android:title="@string/manage_wallet" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/trend" />
        <item android:id="@+id/nav_budget" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/budget_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_setting" android:icon="@mipmap/ic_settings"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>