<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_transaction_add"
    tools:context="com.alanddev.manwal.ui.TransactionAddActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edtamount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="numberDecimal"
        android:hint="@string/amount" />
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgcate"
            android:src="@mipmap/transaction"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/edtcate"
            android:hint="@string/select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="19sp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgdes"
            android:src="@mipmap/notes"
            android:layout_gravity="center_vertical"/>
        <EditText android:id="@+id/edtdes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:hint="@string/note"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imgdate"
            android:src="@mipmap/calendar"
            android:layout_gravity="center_vertical"/>
        <TextView android:id="@+id/edtdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/today"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>
