<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_budget_add"
    tools:context="com.alanddev.manwal.ui.BudgetAddActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_cate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/ic_category_all"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_catename"
            android:layout_toRightOf="@+id/img_cate"
            android:textColor="@color/colorTextColor"
            android:text="@string/all_category_name"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edt_amt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/img_cate"
            android:layout_below="@+id/txt_catename"
            android:layout_marginTop="15dp"
            android:hint="@string/budget_amount"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/img_date"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/calendar"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:id="@+id/txt_start_tt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/img_date"
            android:text="@string/budget_from"/>
        <TextView
            android:id="@+id/txt_startdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_start_tt"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/img_date"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txt_end_tt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/img_date"
            android:layout_below="@+id/txt_startdt"
            android:text="@string/budget_to"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/txt_enddt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/img_date"
            android:layout_below="@+id/txt_end_tt"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>

</LinearLayout>
