<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_wallet_add"
    tools:context="com.alanddev.manwal.ui.WalletAddActivity"
    android:weightSum="1"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:layout_width="53dp"
            android:layout_height="44dp"
            android:id="@+id/imageButton"
            android:src="@mipmap/wallet" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtName"
            android:hint="@string/name_wallet" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickCurrency"
        android:id="@+id/lvCurrency"
        android:background="?android:attr/selectableItemBackground"
        >

        <ImageButton
            android:layout_width="53dp"
            android:layout_height="44dp"
            android:id="@+id/imageCurrency"
            android:clickable="false"
            android:src="@mipmap/wallet" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCurrency"
            android:onClick="onClickCurrency"
            android:hint="@string/currency"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:layout_width="53dp"
            android:layout_height="44dp"
            android:id="@+id/imageAmount"
            android:src="@mipmap/wallet" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmount"
            android:hint="@string/amount_wallet"
            android:inputType="numberDecimal"/>

    </LinearLayout>
</LinearLayout>
