<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/overview"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextColor"/>

        <TextView
            android:id="@+id/overview_smalltitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/overview_title"
            android:layout_marginLeft="15dp"
            android:text="@string/overview_click_me"
            android:textSize="11sp"
            android:textColor="@color/colorTextColor"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_arrow_right" />
    </RelativeLayout>

    <TableRow
        android:id="@+id/hr1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDivider" >
    </TableRow>

    <RelativeLayout
        android:id="@+id/layinflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/txtinflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/inflow_txt"
            android:textColor="@color/colorTextColor"/>

        <TextView
            android:id="@+id/txtInflowAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorInflow"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layOutflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" >

        <TextView
            android:id="@+id/txtoutflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/outflow_txt"
            android:textColor="@color/colorTextColor"/>

        <TextView
            android:id="@+id/txtOutflowAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorOutFlow"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp" >

        <TableRow
            android:id="@+id/hr2"
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/colorDivider" >
        </TableRow>

        <TextView
            android:id="@+id/txtallAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/hr2"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorNetAmount">
        </TextView>
    </RelativeLayout>
</LinearLayout>
